phase2_Dev/src/objects/EEC_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>A custom setting containing EEC configuration.</description>
    <fields>
        <fullName>DS_PowerForm_FccBrcConsentFormLessThan18__c</fullName>
        <label>DS_PowerForm_FccBrcConsentFormLessThan18</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_PowerForm_FccBrcConsentFormLicensee__c</fullName>
        <label>DS_PowerForm_FccBrcConsentFormLicensee</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_PowerForm_FccBrcConsentFormMoreThan18__c</fullName>
        <label>DS_PowerForm_FccBrcConsentFormMoreThan18</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_PowerForm_FccTaxCertificationStatemen__c</fullName>
        <label>DS_PowerForm_FccTaxCertificationStatemen</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_PowerForm_GSA_RP_TaxCertification__c</fullName>
        <label>DS PowerForm GSA RP TaxCertification</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_PowerForm_RandPFacilityandTransCheckl__c</fullName>
        <label>DS_PowerForm_RandPFacilityandTransCheckl</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Url__c</fullName>
        <label>DocuSign Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Portal_Url__c</fullName>
        <label>Portal Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Salesforce_Base_URL__c</fullName>
        <label>Salesforce Base URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Secure_Param_Key__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Secure Param Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>googleMapsApiKey__c</fullName>
        <description>API key for google geocoding</description>
        <label>googleMapsApiKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EEC Config</label>
</CustomObject>